# ml-eval-report

./: README.md  pyproject.toml
src/mleval/: __init__.py  cli.py  metrics.py  report.py
tests/: test_metrics.py
